tests/baselines/reference/symbolType15.errors.txt
tests/cases/conformance/es6/Symbols/symbolType15.ts(5,1): error TS2322: Type 'Symbol' is not assignable to type 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolType15.ts (1 errors) ====
    var sym: symbol;
    var symObj: Symbol;
    
    symObj = sym;
    sym = symObj;
    ~~~
!!! error TS2322: Type 'Symbol' is not assignable to type 'symbol'.